--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "@ionic/pro": "2.0.4",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
+    "ng2-charts": "^2.2.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
